# dispatch

./: .env.example  .gitignore  CONTEXT_PACKAGE.md  LICENSE  PRD.md  README.md  ROADMAP-v2.md  ROADMAP.md  TICKETS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: test-strategy.md  visual-rebuild-spec.md
docs/adr/: 0001-runtime-boundaries.md  0002-terminal-lifecycle.md  0003-data-model.md  0004-history-save-points.md  DISPATCH-001-REVIEW.md  DISPATCH-002-REVIEW.md  DISPATCH-003-REVIEW.md
docs/checklists/: v1-scope.md
docs/reviews/: DISPATCH-005-REVIEW.md  DISPATCH-006-REVIEW.md  DISPATCH-007-REVIEW.md  DISPATCH-008-REVIEW.md  DISPATCH-009-REVIEW.md  DISPATCH-010-REVIEW.md  DISPATCH-011-REVIEW.md
scripts/smoke/: phase-0b-shell.sh  phase-1-projects.sh  phase-10-release.sh  phase-11-browser.sh  phase-2-terminal-core.sh  phase-3-direct-dispatch.sh  phase-4-tasks.sh  phase-5-files.sh  phase-6-history.sh  phase-7-openclaw.sh  (+2 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_agent_profiles.sql  003_task_metadata.sql  004_save_points.sql  005_chat_cache.sql  006_native_cli_profiles.sql
src-tauri/src/: app_state.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: agent_profiles.rs  dispatch.rs  files.rs  health.rs  history.rs  mod.rs  notifications.rs  openclaw.rs  projects.rs  settings.rs  tasks.rs  terminal.rs  window.rs
src-tauri/src/db/: migrate.rs  mod.rs
src-tauri/src/models/: agent_profile.rs  agent_session.rs  chat_message.rs  mod.rs  project.rs  setting.rs  task.rs
src-tauri/src/services/: agent_registry.rs  dispatch.rs  file_watch.rs  mod.rs  path_guard.rs  project_fs.rs  project_registry.rs  pty_manager.rs  review_router.rs  secrets.rs  session_supervisor.rs  task_export.rs  terminal_ws.rs  tray.rs
src-tauri/src/services/history/: diff.rs  mod.rs  restore.rs  save_points.rs
src-tauri/src/services/openclaw/: chat.rs  client.rs  dispatch_bridge.rs  mod.rs  protocol.rs  session_bridge.rs
src-tauri/tests/: agent_profile_commands_smoke.rs  agent_registry_tests.rs  app_boot_smoke.rs  chat_stream_tests.rs  db_schema_smoke.rs  dispatch_validation_tests.rs  file_watch_tests.rs  history_dispatch_hooks_tests.rs  history_restore_tests.rs  openclaw_client_tests.rs  path_guard_tests.rs  project_fs_tests.rs  projects_commands_smoke.rs  projects_db_tests.rs  pty_manager_tests.rs  release_smoke.rs  review_router_tests.rs  save_point_tests.rs  settings_secret_tests.rs  system_tray_smoke.rs  task_commands_smoke.rs  task_commands_tests.rs  task_export_tests.rs  task_transition_tests.rs  terminal_commands_smoke.rs  terminal_ws_attach_tests.rs
(+79 files in other folders)
