[package]
name = "dispatch"
version = "0.1.0"
description = "Dispatch desktop app"
authors = ["Dispatch"]
edition = "2021"

[lib]
name = "dispatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tauri = { version = "2.10.3", features = ["test"] }
