[package]
name = "dispatch"
version = "0.1.0"
description = "Dispatch desktop app"
authors = ["Dispatch"]
edition = "2021"

[lib]
name = "dispatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.8.8", features = ["tokio", "ws"] }
futures-util = "0.3.31"
git2 = "0.20.4"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
libc = "0.2"
portable-pty = "0.9.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tauri = { version = "2.10.3", features = ["test"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
